--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "NODE_ENV=development tsx server/index.ts",
     "build": "npm run build:client && npm run build:ssr && npm run build:server",
     "build:client": "vite build --outDir dist/public --ssrManifest",
-    "build:ssr": "vite build --ssr src/entry-server.tsx --outDir dist",
+    "build:ssr": "vite build --ssr src/entry-server.tsx --outDir ../dist",
     "build:server": "esbuild server/index.ts --platform=node --packages=external --bundle --format=esm --outdir=dist",
     "start": "NODE_ENV=production node dist/index.js",
     "check": "tsc",
